--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "social-media-feed-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://muntasir2165.github.io/social-media-feed-app",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
